<resources>
    <string name="app_name">NavComponentExercise</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome!</string>
    <string name="create_an_account">Create an account</string>
    <string name="e_mail">e-mail</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="log_in">log in</string>
    <string name="submit">Submit</string>
</resources>